--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,10 @@
   height:50px;
 	right: 1rem;
 	top: 30%;
-	background-color: #343A40;
+	background-color: #C82333;
 	border: 1px solid #343A40;
   z-index: 1;
-  border-radius:50%;
+  /* border-radius:50%; */
 }
 .btn-floating-cart:hover,
 .btn-floating-quote:hover {
@@ -20,10 +20,10 @@
 	height:50px;
 	right: 1rem;
 	top: 40%;
-	background-color: #343A40;
+	background-color: #C82333;
 	border: 1px solid #343A40;
 	z-index: 1;
-	border-radius:50%;
+	/* border-radius:50%; */
 }
 .spinner-container {
 	position: absolute;
@@ -45,4 +45,9 @@
 } 
 .text-red{
 	color:#C82333;
+}
+
+#root{
+	background-image: linear-gradient(45deg,#00d4ff, #020024);
+	background: url('https://images.hdqwalls.com/wallpapers/night-road-sky-dark-4k-pn.jpg') no-repeat center center/cover;
 }
