--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,5 +49,5 @@
 
 #root{
 	background-image: linear-gradient(45deg,#00d4ff, #020024);
-	background: url('https://images.hdqwalls.com/download/night-road-sky-dark-4k-pn-1280x1024.jpg') no-repeat center center/cover;
+	background: url('https://wallpapercave.com/wp/wp137339.jpg') no-repeat center center/cover;
 }
