--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,3 +51,17 @@
 	background-image: linear-gradient(45deg,#00d4ff, #020024);
 	background: url('https://images.hdqwalls.com/wallpapers/night-road-sky-dark-4k-pn.jpg') no-repeat center center/cover;
 }
+
+.table-hover tbody tr:hover{
+	color:yellow !important;
+	background-color:#0f1a55 !important;
+}
+
+.card,
+.table {
+	background-color: #072547 !important;
+}
+
+.card-body{
+	color: white;
+}
